[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
authors = ["CDM Example"]
homepage = "https://polkadot.com/"
edition = "2024"

[workspace.dependencies]
cdm = { git = "https://github.com/paritytech/contract-dependency-manager" }
pvm_contract = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "charles/cdm-integration" }
polkavm-derive = "0.31"
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
picoalloc = "5.2"
common = { git = "https://github.com/paritytech/contract-developer-tools", package = "common" }

# Local override: test the in-progress `SolType::Array` cross-contract call
# encoding fix before pushing the branch. Drop this block once the fix is
# merged upstream and the branch catches up.
[patch."https://github.com/paritytech/cargo-pvm-contract"]
pvm_contract = { path = "/Users/charleshetterich/code/cargo-pvm-contract/crates/pvm_contract" }
pvm-contract-macros = { path = "/Users/charleshetterich/code/cargo-pvm-contract/crates/pvm-contract-macros" }
