[package]
name = "tw33d3r"
version.workspace = true
edition.workspace = true
description = "tw33d3r application contract - delegates posting and profiles to @polkadot/threads and @polkadot/profiles"
authors.workspace = true

[dependencies]
cdm.workspace = true
common.workspace = true
pvm_contract.workspace = true
polkavm-derive.workspace = true
parity-scale-codec.workspace = true
picoalloc.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "tw33d3r"
path = "lib.rs"
